--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container">
+    
         <nav class="navbar navbar-light bg-light">
 
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Log
@@ -25,7 +25,7 @@
                     <div class="modal-content">
                         <div class="row">
                             <div class="col-md-6 col-md-offset-3">
-                                <h2>Login Form</h2>
+                                <h2>Login</h2>
                                 <form class="login">
                                     <div class="form-group">
                                         <label for="exampleInputEmail1">Email address</label>
@@ -56,8 +56,8 @@
                     <div class="modal-content">
                         <div class="row">
                             <div class="col-md-6 col-md-offset-3">
-                                <h2>Sign Up Form</h2>
-                                <form class="signup">
+                                <h2 class="d-flex justify-content-center">Sign Up</h2>
+                                <form class="signup p-3">
                                     <div class="form-group">
                                         <label for="exampleInputEmail1">Email address</label>
                                         <input type="email" class="form-control" id="email-input" placeholder="Email">
@@ -71,6 +71,18 @@
                                         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                                         <span class="sr-only">Error:</span> <span class="msg"></span>
                                     </div>
+                                    <div class="btn-group" role="group" aria-label="Button group">
+                                            <button type="button" class="btn btn-secondary">Teach</button>
+                                            <button type="button" class="btn btn-secondary">Learn</button>
+                                            </div>
+
+
+
+
+
+
+
+
                                     <button type="submit" class="btn btn-default">Sign Up</button>
                                 </form>
                                 <br />
@@ -94,6 +106,7 @@
 
 
         </div>
+        <div class="container">
 
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
