--- a/public/index.html
+++ b/public/index.html
@@ -94,21 +94,20 @@
                         </button>
                     </div>
                     <div class="modal-body">
+                        <!-- ID is #s for signup -->
                         <form class="signup" id="s">
                             <!--  NEED to integrate this with an api-route that creates either a student or teacher using the created user id -->
                             <div class="form-group">
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                        id="inlineRadio1" value="option1">
-                                    <label class="form-check-label" for="inlineRadio1">Instructor</label>
+                                    <input class="form-check-input" type="radio" name="studOrInst" id="inst"
+                                        value="instructor">
+                                    <label class="form-check-label" for="inst">Instructor</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                        id="inlineRadio2" value="option2">
-                                    <label class="form-check-label" for="inlineRadio2">Student</label>
+                                    <input class="form-check-input" type="radio" name="studOrInst" id="stud"
+                                        value="student">
+                                    <label class="form-check-label" for="stud">Student</label>
                                 </div>
-    
- 
                             </div>
 
                             <div class="form-group">
@@ -232,11 +231,11 @@
         </div>
         <div class="container">
 
-    </div>
+        </div>
 
 
-    <script type="text/javascript" src="js/login.js"></script>
-    <script type="text/javascript" src="js/signup.js"></script>
+        <script type="text/javascript" src="js/login.js"></script>
+        <script type="text/javascript" src="js/signup.js"></script>
 
 </body>
 
