--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
                     <div class="modal-body">
                         <!-- ID is #s for signup -->
                         <form class="signup" id="s">
-                            <!--  NEED to integrate this with an api-route that creates either a student or instructor using the created user id -->
+                            <!-- Decides whether this user is instructor or student -->
                             <div class="form-group">
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" type="radio" name="studOrInst" id="inst"
