--- a/public/instructors.html
+++ b/public/instructors.html
@@ -60,7 +60,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h2>Welcome <span class="member-name"></span></h2>
+        <h2>Welcome <span class="instructor-name"></span></h2>
       </div>
     </div>
   </div>
