--- a/public/index.html
+++ b/public/index.html
@@ -171,7 +171,7 @@
     <div class="container">
 
         <div class="d-flex justify-content-center">
-            <img class="logoPic" src="./images/LogoMakr_1eRLCk.png.png">
+            <img class="logoPic" src="./images/LogoMakr_1eRLCk.png">
 
 
         </div>
