start for ajax post for classes

--- a/public/instructors.html
+++ b/public/instructors.html
@@ -94,16 +94,16 @@
               <form method="post">
                 <div class="form-group">
                   <label class="control-label" for="date">Date</label>
-                  <input class="form-control" id="datepicker" name="date" placeholder="MM/DD/YYY" type="text" />
+                  <input class="form-control" id="datepicker" name="date" placeholder="need to fix the dropdown here" type="text" />
                 </div>
               </form>
               <!-- Time input -->
-              <!-- <form method="post">
+              <form method="post">
                 <div class="form-group">
                   <label class="control-label" for="time">Time</label>
-                  <input class="form-control" id="time" name="time" placeholder="2:30 PM" type="text" />
+                  <input class="form-control" id="time" name="time" placeholder="2:30" type="text" />
                 </div>
-              </form> -->
+              </form>
               <div class="form-group">
                 <label for="capacity">Class capacity</label>
                 <input type="number" class="form-control" id="capacity-input" placeholder="">
