--- a/public/index.html
+++ b/public/index.html
@@ -96,8 +96,19 @@
                     <div class="modal-body">
                         <!-- ID is #s for signup -->
                         <form class="signup" id="s">
+                            <div class="form-group row">
+                                <div class="col-6">
+                                    <label for="first-name">First Name</label>
+                                    <input type="text" class="form-control" id="first-name" placeholder="First Name">
+                                </div>
+                                <div class="col-6">
+                                    <label for="last-name">Last Name</label>
+                                    <input type="text" class="form-control" id="last-name" placeholder="Last Name">
+                                </div>
+                            </div>
+
                             <!-- Decides whether this user is instructor or student -->
-                            <div class="form-group">
+                            <div class="form-group radio-options">
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" type="radio" name="studOrInst" id="inst"
                                         value="instructor">
@@ -142,14 +153,14 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <form class="login" id="i">
+                        <form class="login" id="l">
 
                             <div class="form-group">
-                                <label for="exampleInputEmail1">Email address</label>
+                                <label for="email-input">Email address</label>
                                 <input type="email" class="form-control" id="email-input" placeholder="Email">
                             </div>
                             <div class="form-group">
-                                <label for="exampleInputPassword1">Password</label>
+                                <label for="password-input">Password</label>
                                 <input type="password" class="form-control" id="password-input" placeholder="Password">
                             </div>
                         </form>
@@ -158,7 +169,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="submit" form="i" class="btn btn-default">Login</button>
+                        <button type="submit" form="l" class="btn btn-default">Login</button>
                     </div>
                 </div>
 
