--- a/public/instructors.html
+++ b/public/instructors.html
@@ -314,7 +314,7 @@
               </div>
               <div class="form-group">
                 <label for="price">Price</label>
-                <input type="number" required ="required" class="form-control" id="price-input" placeholder="50 USD">
+                <input required ="required" class="form-control" id="price-input" placeholder="50 USD">
               </div>
               <br />
               <!-- NEED TO ADD A JS FILE FOR ALL CLASSES HERE -->
