adds get all classes link. not parsed yet

--- a/public/instructors.html
+++ b/public/instructors.html
@@ -318,7 +318,7 @@
               </div>
               <br />
               <!-- NEED TO ADD A JS FILE FOR ALL CLASSES HERE -->
-              <p>See all classes <a href="">here</a></p>
+              <p>See all classes <a href="/classes/all">here</a></p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
