--- a/public/instructors.html
+++ b/public/instructors.html
@@ -306,7 +306,7 @@
             </form>
             <!-- Duration input -->
             <div class="form-group">
-              <label class="control-label" for="time">Class duration</label>
+              <label class="control-label" for="time">Class duration(hours)</label>
               <input type="number" class="form-control" required="required" id="time"/>
             </div>
             </form>
