--- a/public/instructors.html
+++ b/public/instructors.html
@@ -139,6 +139,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Contact</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Logout</a>
+                        </li>
                         </ul>
 
                     </div>
